--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 
 <body>
 <main>
-  <header>
-    <h1>
-      <span class="public">public</span>
-      <span class="digital">digital</span>
-    </h1>
-  </header>
-
-  <ul class="disciplines">
-    <li>Strategy</li>
-    <li>Design</li>
-    <li>Delivery</li>
-    <li>Transformation</li>
-  </ul>
-
+  <div class="wrapper">
+	  <header>
+	    <h1>
+	      <span class="public">public</span>
+	      <span class="digital">digital</span>
+	    </h1>
+	  </header>
+	
+	  <ul class="disciplines">
+	    <li>Strategy</li>
+	    <li>Design</li>
+	    <li>Delivery</li>
+	    <li>Transformation</li>
+	  </ul>
+  </div>
+  
   <footer>
     <p><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#112;&#117;&#98;&#108;&#105;&#99;&#46;&#100;&#105;&#103;&#105;&#116;&#97;&#108;">&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#112;&#117;&#98;&#108;&#105;&#99;&#46;&#100;&#105;&#103;&#105;&#116;&#97;&#108;</a></p>
   </footer>
