--- a/index.html
+++ b/index.html
@@ -2,47 +2,56 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Public Digital</title>
-  <link rel="stylesheet" href="assets/stylesheets/public.digital.holding.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<title>Public Digital</title>
+<link rel="stylesheet" href="assets/stylesheets/public.digital.holding.css">
 </head>
 
 <body>
-<main>
-  <div class="wrapper">
-	  <header>
-	    <h1>
-	      <span class="public">public</span>
-	      <span class="digital">digital</span>
-	    </h1>
-	  </header>
+  <main>
 
-	  <ul class="disciplines">
+    <div class="wrapper">
+
+      <header>
+      <h1>
+      <span class="public">public</span>
+      <span class="digital">digital</span>
+      </h1>
+      </header>
+
+      <div class="intro">
+      <p>We started GDS.</p>
+      <p>We transformed digital delivery for the UK&nbsp;government.</p>
+      <p>Now we help governments and public institutions&nbsp;through:</p>
+      </div>
+
+      <ul class="disciplines">
       <li>Leadership</li>
-	    <li>Strategy</li>
+      <li>Strategy</li>
       <li>Transformation</li>
-	    <li>Design</li>
-	  </ul>
-  </div>
+      <li>Design</li>
+      </ul>
 
-  <footer>
+    </div>
+
+    <footer>
     <p><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#112;&#117;&#98;&#108;&#105;&#99;&#46;&#100;&#105;&#103;&#105;&#116;&#97;&#108;">&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#112;&#117;&#98;&#108;&#105;&#99;&#46;&#100;&#105;&#103;&#105;&#116;&#97;&#108;</a></p>
-  </footer>
-</main>
+    </footer>
+  </main>
 </body>
 
 <script type="text/javascript">
 WebFontConfig = { fontdeck: { id: '59868' } };
 
 (function() {
-  var wf = document.createElement('script');
-  wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-  '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-  wf.type = 'text/javascript';
-  wf.async = 'true';
-  var s = document.getElementsByTagName('script')[0];
-  s.parentNode.insertBefore(wf, s);
+var wf = document.createElement('script');
+wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+'://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+wf.type = 'text/javascript';
+wf.async = 'true';
+var s = document.getElementsByTagName('script')[0];
+s.parentNode.insertBefore(wf, s);
 })();
 </script>
 
