Tune layout at desktop, better spacing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </header>
 
 <div class="intro">
-<p>We started GDS.</p>
+<p><a href="https://gds.blog.gov.uk/">We started GDS</a>.</p>
 <p>We transformed digital delivery for the UK&nbsp;government.</p>
 <p>Now we help governments and public institutions&nbsp;through:</p>
 </div>
