Slapped together version while baby sitting
I cloned master and worked from there instead of your new branch too
rushed to work that out until I'd finished. A mix of baby sitting and
having trouble conecting to FTP and Ben nagging me from the cinema and
trying to answer emails on my laptop and slack messages on Ben's
laptop - multi-tasking fail.

Anyhow I've:
• Deleted a load of CSS from you master branch
• Added a div.content and popped the content in there
• Styled that
• Made it responsive
• Copied code for the h1 and bodged that a little
• Left this pretty messy

I noticed you have a gradient background which is long hand coded in
your scss. Any reason you're not using something like CSS3 mixins like
in the FE toolkit?
https://github.com/alphagov/govuk_frontend_toolkit/blob/master/stylesheets/_css3.scss#L44
Those CSS3 mixins are pretty sweet. I wrote most of them in the very
early days of learning SASS in 2012!

Thanks Guy and sorry for bothering you on you half term hols. Enjoy
the rest of your break. Catch up soon mate.

Oh.. P.S. I compiled the SASS locally using the basic `sass --watch` I
haven't git added and included that mapping and caching because I
thought that was a little unecessary.

--- a/index.html
+++ b/index.html
@@ -10,23 +10,29 @@
 
 <body>
 <main>
-  <header>
-    <h1>
-      <span class="public">public</span>
-      <span class="digital">digital</span>
-    </h1>
-  </header>
-
-  <ul class="disciplines">
-    <li>Strategy</li>
-    <li>Design</li>
-    <li>Delivery</li>
-    <li>Transformation</li>
-  </ul>
-
-  <footer>
-    <p><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#112;&#117;&#98;&#108;&#105;&#99;&#46;&#100;&#105;&#103;&#105;&#116;&#97;&#108;">&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#112;&#117;&#98;&#108;&#105;&#99;&#46;&#100;&#105;&#103;&#105;&#116;&#97;&#108;</a></p>
-  </footer>
+  <div class="wrapper">
+    <header>
+      <h1>
+        <span class="public">public</span>
+        <span class="digital">digital</span>
+      </h1>
+    </header>
+    
+    <div class="content">
+      <h2>We founded <a href="https://gds.blog.gov.uk/">GDS</a></h2>
+      <P>We transformed digital delivery for the UK government</P>
+      <P>Now we're working outside the UK - helping governments, public institutions, transnational organisations and political leaders do the same</P>
+      <p>We have expertise in:</p>
+      <ul class="disciplines">
+        <li>Leadership</li>
+        <li>Strategy</li>
+        <li>Transformation</li>
+        <li>Design</li>
+      </ul>
+      <p>Right now, we are Mike Bracken, Russell Davies, Tom Loosemore and Ben Terrett.</p>
+      <p>We launch properly in November, in the meantime, if you think we might be able to help, get in touch at <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#112;&#117;&#98;&#108;&#105;&#99;&#46;&#100;&#105;&#103;&#105;&#116;&#97;&#108;">&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#112;&#117;&#98;&#108;&#105;&#99;&#46;&#100;&#105;&#103;&#105;&#116;&#97;&#108;</a></p>
+    </div>
+  </div>
 </main>
 </body>
 
